@@ -4,6 +4,7 @@ Microsoft Visual Studio Solution File, Format Version 11.00
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{F9A88F20-64E5-442C-8C20-10C69A39EF4C}"
 	ProjectSection(SolutionItems) = preProject
 		BreakingChanges.txt = BreakingChanges.txt
+		Changes.txt = Changes.txt
 		License.txt = License.txt
 		Readme.txt = Readme.txt
 	EndProjectSection
